test/negative/204_while_cond_nonbool.err
204_while_cond_nonbool.fx:2:7: error: while() loop condition should have 'bool' type

1 errors occured during type checking.
